Fix dropdown positioning and z-index

--- a/website/src/index.css
+++ b/website/src/index.css
@@ -463,11 +463,6 @@ details.not-focused {
   padding: 0px;
 }
 
-.menu-item {
-  position: relative;
-  z-index: 5;
-}
-
 .dropdown {
   position: relative;
   cursor: pointer;
@@ -475,10 +470,12 @@ details.not-focused {
 
 .dropdown .dropdown-content {
   position: absolute;
+  margin-top: 3px;
   left: 0;
-  width: 100%;
+  right: 0;
   top: 100%;
-  min-inline-size: max-content;
+  z-index: 1;
+  background: #fff;
 }
 
 .dropdown ul {
